# Atlas

./: .gitignore  api_calls.ipynb  free_api_key.txt  pyproject.toml  requirements.txt
src/: app.py  db_scripts.ipynb  dbconfig  dependencies.py  init.sql  init2.sql  inserter.py  queries.py
src/controllers/: asset_types.py  users.py
